<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="60sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/selectgame"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/cricketbtn"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="goToCricket"
                android:text="@string/selectgame1"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />
            <Button
                android:id="@+id/courtbtn"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="goToBasketBall"
                android:text="@string/selectgame2"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>