<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketBall">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/chikago"
                    android:contentDescription="@string/team_a" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/team_a"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="60sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/plus_three"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/plus_two"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addOneForTeamA"
                    android:text="@string/plus_one"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/miami"
                    android:contentDescription="@string/team_b" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/team_b"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/zero"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="60sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/plus_three"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/plus_two"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button"
                    android:onClick="addOneForTeamB"
                    android:text="@string/plus_one"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/button"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
